--- a/package.json
+++ b/package.json
@@ -8,14 +8,27 @@
     "node": ">=6"
   },
   "author": "Matt Crutchfield <matt.crutchfield@turner.com>",
+  "main": "lib/index.js",
+  "scripts": {
+    "clean": "rimraf lib",
+    "build": "npm run -s clean && babel src -d lib",
+    "build:watch": "npm run -s clean && babel src -w -d lib"
+  },
   "dependencies": {
     "babel-plugin-css-modules-transform": "1.2.7",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
+    "babel-plugin-transform-react-display-name": "^6.23.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "6.22.0",
-    "babel-preset-react": "6.22.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-stage-2": "6.22.0"
   },
   "peerDependencies": {
     "react-hot-loader": ">=3.0.0-beta.6"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "rimraf": "^2.6.1"
   }
 }
